--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -210,7 +210,7 @@ const featuredProject = projects[0]!;
 				src="public/assets/20211028_085142.jpg"
 				sizes="(max-width: 800px) 800px, (max-width: 1200px) 1200px, (max-width: 1600px) 1600px, (max-width: 2400px) 2400px, 1200px"
 			/>
-			<div class="gradient"></div>
+			{/*<div class="gradient"></div>*/}
 			<div class="gradient2"></div>
 			<div class="overlay">
 				<h1 class="title">
@@ -218,7 +218,7 @@ const featuredProject = projects[0]!;
 				</h1>
 				<div class="roles">
 					<span class="role">👩‍💻 Developer <span class="invert">👩‍💻 Developer</span></span>
-					<span class="role">🎤 Speaker <span class="invert">🎤 Speaker</span></span>
+					{/*<span class="role">🎤 Speaker <span class="invert">🎤 Speaker</span></span>*/}
 					<span class="role">🔥 Welder<span class="invert">🔥 Welder</span></span>
 				</div>
 				<p class="desc">Lover of dogs, roadtrips, and poetry.</p>
