prepare for deployment

--- a/src/pages/about.astro
+++ b/src/pages/about.astro
@@ -6,7 +6,7 @@ import Nav from '../components/Nav.astro';
 
 <html lang="en">
 	<head>
-		<MainHead title="About | Paul Norling" description="About Paul Norling Lorem Ipsum" />
+		<MainHead title="About | Paul Norling" description="About Paul Norling" />
 		<style>
 			.heroImg {
 				max-height: 24rem;
