--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -221,7 +221,7 @@ const featuredProject = projects[0]!;
 					{/*<span class="role">🎤 Speaker <span class="invert">🎤 Speaker</span></span>*/}
 					<span class="role">🔥 Welder<span class="invert">🔥 Welder</span></span>
 				</div>
-				<p class="desc">Lover of dogs, roadtrips, and poetry.</p>
+				<p class="desc">Design, Build, Repeat</p>
 			</div>
 		</header>
 		<main class="wrapper">
@@ -236,7 +236,7 @@ const featuredProject = projects[0]!;
 				<div class="section">
 					<h3 class="sectionTitle">About me</h3>
 					<p class="bio">
-						<span>Hello!</span> I’m Jeanine, and this is my website. It was made using{' '}
+						<span>Hello!</span> I’m Paul, and this is my website. It was made using{' '}
 						<a href="https://github.com/withastro/astro" target="_blank" rel="nofollow"> Astro</a>,
 						a new way to build static sites. This is just an example template for you to modify.
 					</p>
