--- a/src/pages/projects.astro
+++ b/src/pages/projects.astro
@@ -16,8 +16,8 @@ const projects = (await Astro.glob<Project>('./project/**/*.md'))
 <html lang="en">
 	<head>
 		<MainHead
-			title="All Projects | Jeanine White"
-			description="Learn about Jeanine White's most recent projects"
+			title="All Projects | Paul Norling"
+			description="Learn about Paul Nolring's most recent projects"
 		/>
 		<style>
 			.grid {
