--- a/src/components/Nav.astro
+++ b/src/components/Nav.astro
@@ -1,9 +1,9 @@
 <nav>
-	<a class="link" href="/">
+	<a class="link" href="/ultraviolet-photon/">
 		<div class="monogram">PN</div>
 	</a>
-	<a class="link" href="/projects/"> Portfolio</a>
-	<a class="link" href="/about/"> About</a>
+	<a class="link" href="/ultraviolet-photon/projects/"> Portfolio</a>
+	<a class="link" href="/ultraviolet-photon/about/"> About</a>
 	<div class="socials">
 		<a class="social" href="https://www.linkedin.com/in/paul-norling-674493257/">
 			<svg class="socialIcon" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 16 16">
