--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -230,7 +230,7 @@ const featuredProject = projects[0]!;
 					<h3 class="sectionTitle">Selected Work</h3>
 					<PortfolioPreview project={featuredProject} />
 					<div class="buttonContainer">
-						<a href="/projects/" class="button">View All</a>
+						<a href="/ultraviolet-photon/projects/" class="button">View All</a>
 					</div>
 				</div>
 				<div class="section">
@@ -241,7 +241,7 @@ const featuredProject = projects[0]!;
 						a new way to build static sites. This is just an example template for you to modify.
 					</p>
 					<p>
-						<a href="/about">Read more</a>
+						<a href="/ultraviolet-photon/about">Read more</a>
 					</p>
 				</div>
 			</div>
