--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -207,7 +207,7 @@ const featuredProject = projects[0]!;
 				width="1600"
 				height="1131"
 				class="img"
-				src=""
+				src="public/assets/20211028_085142.jpg"
 				sizes="(max-width: 800px) 800px, (max-width: 1200px) 1200px, (max-width: 1600px) 1600px, (max-width: 2400px) 2400px, 1200px"
 			/>
 			{/*<div class="gradient"></div>*/}
