about page update

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -87,6 +87,7 @@ const featuredProject = projects[0]!;
 				font-size: var(--f-u6);
 				margin-bottom: 0.5rem;
 				margin-top: 0;
+				color: var(--c-white);
 			}
 
 			@media (min-width: 750px) {
@@ -236,9 +237,7 @@ const featuredProject = projects[0]!;
 				<div class="section">
 					<h3 class="sectionTitle">About me</h3>
 					<p class="bio">
-						<span>Hello!</span> I’m Paul, and this is my website. It was made using{' '}
-						<a href="https://github.com/withastro/astro" target="_blank" rel="nofollow"> Astro</a>,
-						a new way to build static sites. This is just an example template for you to modify.
+						<span>Hello!</span> I’m Paul, and this is my website. 
 					</p>
 					<p>
 						<a href="/ultraviolet-photon/about">Read more</a>
