--- a/src/pages/about.astro
+++ b/src/pages/about.astro
@@ -37,38 +37,20 @@ import Nav from '../components/Nav.astro';
 				<img
 					width="1400"
 					height="350"
-					src="https://images.unsplash.com/photo-1581977012607-4091712d36f9?auto=format&fit=crop&w=1400&h=350&q=75"
+					src="https://drive.google.com/uc?export=download&id=1Ejc4RWZPMwdJwm3H8prXbrUNJYF1K8RE"
 				/>
 			</div>
 			<div class="bio wrapper">
 				<p>
-					Cream cheese say cheese stinking bishop. Brie fondue hard cheese bocconcini feta camembert
-					de normandie babybel airedale. Red leicester swiss manchego mascarpone pepper jack
-					airedale fromage frais ricotta. Cheese and biscuits cauliflower cheese boursin.
-				</p>
-				<p>
-					Pepper jack cheesy feet cheese slices. Halloumi port-salut queso caerphilly roquefort
-					cheese slices cheesy feet rubber cheese. Cheese slices smelly cheese pecorino macaroni
-					cheese feta blue castello roquefort edam. Babybel pepper jack airedale cheddar fromage
-					frais manchego.
-				</p>
-				<p>
-					Cauliflower cheese lancashire macaroni cheese. Cheeseburger babybel cheese on toast
-					airedale cauliflower cheese who moved my cheese roquefort paneer. Stinking bishop cheddar
-					taleggio port-salut port-salut stinking bishop cheesy grin babybel. Blue castello feta
-					everyone loves brie.
-				</p>
-				<p>
-					Goat squirty cheese cut the cheese. Cheese and wine cheddar fondue airedale cottage cheese
-					camembert de normandie feta babybel. Rubber cheese melted cheese pecorino port-salut
-					fondue gouda cheese on toast cheesy feet. Feta edam everyone loves cheese strings
-					camembert de normandie.
-				</p>
-				<p>
-					Caerphilly monterey jack goat. Squirty cheese cheesy grin hard cheese cheese strings
-					cheese and biscuits croque monsieur smelly cheese danish fontina. Swiss cheese triangles
-					everyone loves mascarpone cheese on toast who moved my cheese lancashire cheeseburger.
-					Fromage frais fromage frais cheese and biscuits stinking bishop cauliflower cheese.
+					Experienced pipefitter with a passion for technology and a desire to transition into
+					the field of software development. Throughout my career, I have honed my analytical
+					and problem-solving skills, and have a proven track record of delivering high-quality
+					work while adhering to strict safety and quality standards. With a strong foundation
+					in math and logic, as well as an eagerness to learn and adapt, I am excited to bring my
+				    technical expertise and attention to detail to the world of software development. I am 
+					seeking an opportunity to leverage my transferable skills and continue growing as a 
+					software developer.
+
 				</p>
 			</div>
 		</div>
