--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -239,6 +239,9 @@ const featuredProject = projects[0]!;
 					<p class="bio">
 						<span>Hello!</span> I’m Paul, and this is my website. 
 					</p>
+					<div>
+					<img src="https://lh3.googleusercontent.com/6EcHBrKAgPJvsuJO4olerdSpKd4W7JhAI96u3t9HHxHOgd1-pbQixQ8RK9DVDWt3Uxc=w2400"/>
+					</div>
 					<p>
 						<a href="/ultraviolet-photon/about">Read more</a>
 					</p>
