--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -237,7 +237,7 @@ const featuredProject = projects[0]!;
 				<div class="section">
 					<h3 class="sectionTitle">About me</h3>
 					<p class="bio">
-						<span>Hello!</span> I’m Paul, and this is my website. 
+						<span>Hello!</span> I’m Paul this is my website. 
 					</p>
 					<div>
 					<img src="https://lh3.googleusercontent.com/6EcHBrKAgPJvsuJO4olerdSpKd4W7JhAI96u3t9HHxHOgd1-pbQixQ8RK9DVDWt3Uxc=w2400"/>
